fix: Menubar icons position on mobile (#1196)
* Fix: Styling of menu bar icons for profile

* Fix: Mobile Navbar icons for profile

* Search bar resize

* Using home.css instead of searchbar.css

--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -2,13 +2,12 @@
   display: none !important;
 }
 
-@media screen and (max-width: 380px) {
+@media screen and (max-width: 320px) {
   .p-menubar-end {
     font-size: 12px;
     flex: 100%;
     margin: 8px 0 0 !important;
   }
-
   .p-menubar-end .pr-2 {
     padding-right: 0 !important;
   }
